# AdaFace

./: .gitignore  export_onnx.ipynb  inference.ipynb  inference.py  onnx.ipynb  pyproject.toml  requirements.txt  setup.py
face_alignment/: align.py
src/adaface/: inference.py  main.py  net.py
src/adaface/face_alignment/: align.py  mtcnn.py
