[tool.poetry]
name = "adaface"
version = "0.1.0"
description = ""
authors = ["naxa"]
license = "proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.2.0"
numpy = "^1.26.4"
opencv-python = "^4.10.0.84"
pytorch-lightning = "^2.0"
onnx = "^1.15.0"
tqdm = "^4.66.1"
pillow = "^10.2.0"
onnxruntime-gpu = "^1.16.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"
notebook = "^7.0.6"


[tool.ruff]
line-length = 130
target-version = "py311"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
